# parallel-aws-requests

./: Cargo.toml  readme.md
src/: main.rs
