[package]
name = "parallel-aws-requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3.30"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.37.0"
